--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,337 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lexend Deca", sans-serif;
 }
 
-a {
-  color: inherit;
+:root{
+  --oarnge:#ec5f00;
+}
+
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.534);
+}
+
+button.logout_btn{
+  padding: 8px 16px;
+  color: white;
+  background: var(--oarnge);
+  border-radius: 4px;
+  border: none;
+}
+
+
+
+#register_module,
+.loggedPages{
+  min-height: 100vh;
+  width: 100%;
+  background:linear-gradient(to top,rgb(75, 0, 75),purple);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  padding: 0 20px;
+}
+
+.loggedPages{
+  gap: 0;
+  justify-content: unset;
+  padding-top: 100px;
+}
+
+#register_module .logo{
+  width: 120px;
+}
+
+#register_module form{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 100%;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+#register_module form input,
+#register_module form select{
+  padding: 8px 16px;
+  min-height: 30px;
+  border: none;
+  background: none;
+  border-bottom: solid rgb(255, 255, 255) 1px;
+  color: white;
+}
+
+#register_module form select option{
+  color: black;
+}
+
+#register_module form input::placeholder{
+  color: white;
+}
+
+#register_module form button{
+  width: fit-content;
+  margin: auto;
+  margin-top: 16px;
+  color: white;
+  background: var(--oarnge);
+  border-radius: 4px;
+  border: none;
+  padding: 12px 24px;
+}
+
+.login_register_swap{
+  color: white;
+  font-size: 14px;
+}
+
+.login_register_swap a{
+  color: var(--oarnge);
+}
+
+.myProfile{
+  display: flex;
+  align-items: center;
+/* justify-content: space-between; */
+gap: 24px;
+width: 100%;
+background-color:rgba(255, 255, 255, 0.151);
+border-bottom: solid var(--oarnge) 4px;
+padding: 20px;
+border-radius: 8px;
+position: relative;
+
+}
+
+.myProfile .profileImg{
+  width: 80px;
+  height: 80px;
+  border-radius: 150px;
+  object-fit: cover;
+}
+
+.myProfile .profileDetail{
+display: flex;
+flex-direction: column;
+gap: 16px;
+color: white;
+}
+
+.addPostBtn{
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  font-size: 12px;
+  line-height: 20px;
+  background-color: var(--oarnge);
+  color: white;
+  border-radius: 4px;
+  border: none;
+  padding: 4px 12px;
+}
+
+.myProfile .profileDetail .profileName{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  color: var(--oarnge);
+}
+
+.myProfile .profileDetail .profileUsername,
+.myProfile .profileDetail .profileFriends{
+  font-size: 14px;
+  line-height: 14px;
+}
+
+.allPosts,
+.allUsers{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 30px;
+  width: 100%;
+}
+
+.allUsers{
+  margin-top: 0;
+}
+
+.post{
+width: 100%;
+border-radius: 8px;
+overflow: hidden;
+border: solid rgba(0, 0, 0, 0.5) 1px;
+}
+
+.postHeader,
+.user{
+  display: flex;
+  gap: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  align-items: center;
+  padding: 10px 20px;
+
+}
+
+.postHeader .postProfileImg,
+.allUsers .postProfileImg{
+  height: 24px;
+  width: 24px;
+  object-fit: cover;
+  border-radius: 100px;
+}
+
+.postProfileName{
+  font-size: 14px;
+  line-height: 14px;
+  color: white;
+}
+
+.postTime{
+  font-size: 10px;
+  line-height: 10px;
+  color: white;
+  margin-left: auto;
+}
+
+.postDetail{
+  padding: 10px 20px;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  background-color: var(--oarnge);
+  padding: 10px 20px;
+}
+
+footer a{
+  width: 33.33%;
+  text-align: center;
+  padding: 10px;
+  font-size: 14px;
   text-decoration: none;
+  color: white;
+}
+footer a:nth-child(2){
+  border-left: solid rgba(0, 0, 0, 0.5) 1px;
+  border-right: solid rgba(0, 0, 0, 0.5) 1px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.allUsers .user,
+.allUsers .user .userDetail{
+display: flex;
+align-items: center;
+gap: 10px;
+}
+
+.allUsers .user{
+  width: 100%;
+}
+
+.allUsers .user .postProfileImg{
+  border: solid var(--oarnge) 2px;
+}
+
+.allUsers .user .userDetail p{
+  color: white;
+  font-size: 14px;
+}
+
+.addFriendBtn,
+.friendRequestBtns button{
+  margin-left: auto;
+  background: var(--oarnge);
+  color: white;
+  border-radius: 4px;
+  padding: 4px 8px;
+  border: none;
+}
+
+.friendRequestBtns{
+margin-left: auto;
+gap: 16px;
+display: flex;
+}
+
+.friendRequestBtns button.deny{
+  background: rgb(218, 0, 0);
+}
+
+.reqStatus{
+  margin-left: auto;
+  color: white;
+  font-size: 12px;
+  line-height: 20px;
+  padding: 4px 8px;
+  border-radius: 4px
+}
+
+.accepted{
+  background-color: green;
+}
+
+.denied{
+  background: red;
+
+}
+
+.popup{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 9;
+  display: grid;
+  place-items: center;
+  padding: 20px;
+}
+
+.popup form{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 4px;
+  gap: 16px;
+}
+
+.popup form textarea{
+  min-height: 250px;
+  padding: 10px;
+}
+
+.popup form  button{
+  width: fit-content;
+  margin: auto;
+  color: white;
+  background: var(--oarnge);
+  border-radius: 4px;
+  border: none;
+  padding: 12px 24px;
 }
