--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
 header{
   position: fixed;
   top: 0;
+  z-index: 9;
   left: 0;
   width: 100%;
   display: flex;
@@ -161,7 +162,7 @@ color: white;
 .allPosts,
 .allUsers{
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 20px;
   margin-top: 30px;
   width: 100%;
@@ -334,4 +335,34 @@ display: flex;
   border-radius: 4px;
   border: none;
   padding: 12px 24px;
+}
+
+.loader{
+  height: 100vh;
+  width: 100vw;
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.85);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader .ring{
+height: 40px;
+width: 40px;
+border-top: solid var(--oarnge) 4px;
+border-bottom: solid var(--oarnge) 4px;
+border-left: solid purple 4px;
+border-right: solid purple 4px;
+border-radius: 100px;
+animation: loader 1s infinite linear;
+}
+
+@keyframes loader {
+  to{
+    transform: rotate(360deg);
+  }
 }
