--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -366,3 +366,9 @@ animation: loader 1s infinite linear;
     transform: rotate(360deg);
   }
 }
+
+.error{
+  color: red;
+  font-size: 14px;
+  text-align: center;
+}
